crates/uselesskey-core-token/tests/snapshots/snapshots_token_core__token_core_api_key_structure.snap
---
source: crates/uselesskey-core-token/tests/snapshots_token_core.rs
expression: result
---
prefix: uk_test_
prefix_len: 8
random_suffix_len: 32
total_len: 40
has_correct_prefix: true
suffix_all_alphanumeric: true
