crates/uselesskey-core-token/tests/snapshots/snapshots_token_core__token_core_determinism.snap
---
source: crates/uselesskey-core-token/tests/snapshots_token_core.rs
expression: results
---
- kind: ApiKey
  same_seed_matches: true
- kind: Bearer
  same_seed_matches: true
- kind: OAuthAccessToken
  same_seed_matches: true
