crates/uselesskey-core-token/tests/snapshots/snapshots_token_core__token_core_oauth_structure.snap
---
source: crates/uselesskey-core-token/tests/snapshots_token_core.rs
expression: result
---
segment_count: 3
is_jwt_shaped: true
total_len: 247
